2008-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Define a base URL entity and use ulink to 
	link to types, interfaces and methods in the Telepathy specification.

2008-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: Implement code to get a text 
	channel and send a message on it, though (like the list_contacts example) 
	it does not work now due to this error from 
	tp_connection_get_contacts_by_id():
        Connection manager :1.171 is broken: contact #2 in the GetContactAttributes result has no contact-id

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/Makefile.am
	* docs/examples/send_message/main.c:  Added the beginnings of a 
	an example to send a single message to a single specific contact.

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/set_presence/main.c: 
	* docs/examples/list_contacts/main.c: Use the *_call_when_ready() 
	functions instead of *_run_until_ready().

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/set_presence/main.c: Wait until the connection is 
	ready, so that setting of the presence can succeed. 

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/Makefile.am
	* docs/examples/set_presence/: Added a (nonworking) example of 
	setting presence, by copying the connect example and adding a call.

2008-12-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Use *_call_* functions instead 
	of *_run_* functions because everybody says they should never be used.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Get other contact features, 
	to show aliases and presence.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Examine the actual contacts 
	handles as before rather than the handle for the list of contacts.
	This now works.
